# nzwl

./: .gitignore  Cargo.toml  DISCLAIMER.md  README.md
docs/: strategy-guide.md
scripts/: package_release.ps1
src/: input.rs  keys.rs  lib.rs  logitech.rs  main.rs  monitor.rs  ocr.rs  screen.rs  stop_flag.rs  strategy.rs  strategy_executor.rs
src/game/: building_inferno.rs  common.rs  hell.rs  hero.rs  mod.rs  normal.rs  training_hard.rs
strategies/: hero.json
